--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'java'
 }
 
-group = 'com.epam.graphql'
+group = 'com.pav.graphql'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
